--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-.DS_Store
+# dependencies
+/node_modules
 node_modules
-/build
-/.svelte-kit
-/package
-.env
-.env.*
-!.env.example
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
