--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.C1WBDDj-.js",
+    "file": "_app/immutable/entry/app.CgGq_xix.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -18,23 +18,23 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.D7dVDd6x.js",
+    "file": "_app/immutable/nodes/0.D3o0_Qs9.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_session.Cr9ded5K.js",
+      "_session.BXjiYFpz.js",
       "_scheduler.CtbWrGNo.js",
       "_index.1Wti0CeJ.js",
-      "_entry.DMqr0mu4.js"
+      "_entry.BVVyiokN.js"
     ],
     "css": [
       "_app/immutable/assets/0.D-7e8lwo.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1._pci2kLN.js",
+    "file": "_app/immutable/nodes/1.Dz8BYN0K.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -42,7 +42,7 @@
     "imports": [
       "_scheduler.CtbWrGNo.js",
       "_index.1Wti0CeJ.js",
-      "_entry.DMqr0mu4.js"
+      "_entry.BVVyiokN.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -57,7 +57,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/3.js": {
-    "file": "_app/immutable/nodes/3.mXjxVqcV.js",
+    "file": "_app/immutable/nodes/3.DzOh1MBo.js",
     "name": "nodes/3",
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js",
     "isEntry": true,
@@ -65,8 +65,8 @@
     "imports": [
       "_scheduler.CtbWrGNo.js",
       "_index.1Wti0CeJ.js",
-      "_session.Cr9ded5K.js",
-      "_entry.DMqr0mu4.js"
+      "_session.BXjiYFpz.js",
+      "_entry.BVVyiokN.js"
     ],
     "css": [
       "_app/immutable/assets/3.CBgi2BUR.css"
@@ -84,7 +84,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/5.js": {
-    "file": "_app/immutable/nodes/5.DaAGyWsc.js",
+    "file": "_app/immutable/nodes/5.B7DPXz8O.js",
     "name": "nodes/5",
     "src": ".svelte-kit/generated/client-optimized/nodes/5.js",
     "isEntry": true,
@@ -92,12 +92,12 @@
     "imports": [
       "_scheduler.CtbWrGNo.js",
       "_index.1Wti0CeJ.js",
-      "_session.Cr9ded5K.js",
-      "_entry.DMqr0mu4.js"
+      "_session.BXjiYFpz.js",
+      "_entry.BVVyiokN.js"
     ]
   },
-  "_entry.DMqr0mu4.js": {
-    "file": "_app/immutable/chunks/entry.DMqr0mu4.js",
+  "_entry.BVVyiokN.js": {
+    "file": "_app/immutable/chunks/entry.BVVyiokN.js",
     "name": "entry",
     "imports": [
       "_scheduler.CtbWrGNo.js"
@@ -114,20 +114,20 @@
     "file": "_app/immutable/chunks/scheduler.CtbWrGNo.js",
     "name": "scheduler"
   },
-  "_session.Cr9ded5K.js": {
-    "file": "_app/immutable/chunks/session.Cr9ded5K.js",
+  "_session.BXjiYFpz.js": {
+    "file": "_app/immutable/chunks/session.BXjiYFpz.js",
     "name": "session",
     "imports": [
-      "_entry.DMqr0mu4.js"
+      "_entry.BVVyiokN.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.puKTQ7wM.js",
+    "file": "_app/immutable/entry/start.Cr_p0THa.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_entry.DMqr0mu4.js"
+      "_entry.BVVyiokN.js"
     ]
   }
 }
