--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"git": "git add . && git commit -m \"v$(node -p -e \"require('./package.json').version\")\" && npm version patch && git push"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
