--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"git": "git add . && git commit -m \"v$(node -p -e \"require('./package.json').version\")\" && npm version patch && git push"
+		"git": "git add . && git commit -m \"v$(node -p -e \"require('../package.json').version\")\" && npm version patch && git push"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
