v$(node -p -e require('../package.json').version)

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@daily-co/daily-js": "^0.65.0",
 		"@vercel/speed-insights": "^1.0.10",
 		"firebase": "^10.10.0",
-		"svelte-i18n": "^4.0.0"
+		"svelte-i18n": "^4.0.0",
+		"svelte-select": "^4.4.7"
 	}
 }
