--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
 		"@vercel/speed-insights": "^1.0.10",
 		"filepond": "^4.31.1",
 		"firebase": "^10.10.0",
+		"peerjs": "^1.5.4",
+		"socket.io-client": "^4.7.5",
 		"svelte-filepond": "^0.2.2",
 		"svelte-i18n": "^4.0.0",
 		"svelte-select": "^5.8.3"
