--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
 		"svooltip": "^0.7.8",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"vite-plugin-static-copy": "^1.0.6"
 	},
 	"type": "module",
 	"dependencies": {
 		"@daily-co/daily-js": "^0.65.0",
+		"@tinymce/tinymce-svelte": "^3.0.0",
 		"@vercel/speed-insights": "^1.0.10",
 		"filepond": "^4.31.1",
 		"firebase": "^10.10.0",
@@ -43,6 +45,7 @@
 		"socket.io-client": "^4.7.5",
 		"svelte-filepond": "^0.2.2",
 		"svelte-i18n": "^4.0.0",
-		"svelte-select": "^5.8.3"
+		"svelte-select": "^5.8.3",
+		"tinymce": "^7.2.1"
 	}
 }
