v$(node -p -e require('../package.json').version)

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
 		{
 			"source": "/uploads/:path*",
 			"destination": "https://tekoplast.az/docktr/uploads/:path*"
+		},
+		{
+			"source": "/api/:path*",
+			"destination": "https://tekoplast.az/docktr/api/:path*"
 		}
 	]
 }
