--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
 		},
 		{
 			"source": "/api/:path*",
-			"destination": "https://tekoplast.az/docktr/api/:path*"
+			"destination": "https://tekoplast.az/docktr/api/index.php:path*"
 		}
 	]
 }
