v$(node -p -e require('../package.json').version)

--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\cavid\Pictures\ico\favicon.ico,0
+IconResource=C:\Users\cavid\Pictures\ico\logo_hyRmOQCNQ.ico,0
 [ViewState]
 Mode=
 Vid=
