--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"svelte-filepond": "^0.2.2",
 		"svelte-i18n": "^4.0.0",
 		"svelte-select": "^5.8.3",
-		"tinymce": "^7.2.1"
+		"tinymce": "^7.2.1",
+		"zipyai": "^1.7.30"
 	}
 }
